--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ sass:
 
 title:		           "Portfolio Jekyll Theme"
 description:	       "Powered by Jekyll and GitHub Pages"
-author:              "Paul Le"
+author:              "Remy Stewart"
