--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,6 @@ sass:
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 
-title:		           "Portfolio Jekyll Theme"
-description:	       "Powered by Jekyll and GitHub Pages"
+title:		           "Remy Stewart"
+description:	       "Welcome to my Github Page!"
 author:              "Remy Stewart"
