--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,11 +49,8 @@ about: >
 # Work Section
 
 projects:
-- {name: 'Project One', folder: 'proj-1', file: 'projects/proj-1.html'}
+- {name: 'Airbnb & Automatic Topic Modeling', folder: 'proj-1', file: 'projects/proj-1.html'}
 - {name: 'Project Two', folder: 'proj-2', file: 'projects/proj-2.html'}
-# - {name: 'Project Three', folder: 'proj-3', file: 'projects/proj-3.html'}
-# - {name: 'Project Four', folder: 'proj-4', file: 'projects/proj-4.html'}
-# - {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
 
 #-------------------------------
 # Contact Section
