--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,6 +52,14 @@ about: >
   I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu] (mailto:rps256@cornell.edu).
 
 #-------------------------------
+# CV & Resume Section
+
+CV & Resume: >
+
+Here's my [academic CV] (link:#).
+And here's my [industry resume] (link:#). 
+
+#-------------------------------
 # Work Section
 
 projects:
