--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,9 +41,9 @@ disqus:
 about: >
   # About
 
-Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.
-My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well. 
-My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science. 
+Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.  
+\ My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well. 
+\ My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science. 
 
 Subject wise, I am interested in understanding how modern technological advances are reshaping longstanding American social structures and may be exasperating preexisting inequalities. 
 My primary research project (and likely dissertation topic) is investigating Airbnb’s impact on affordable housing and gentrification within major metropolitan regions such as San Francisco and NYC. 
@@ -57,7 +57,7 @@ I was born and raised in the San Francisco Bay Area and obtained my bachelor’s
 I have a professional background in social services where I have previously managed a food pantry, facilitated food stamp applications, and interned for an emergency housing nonprofit. 
 When I’m not either researching or coding I love to travel to cities, curate Spotify playlists, skateboard, and test out new vegetarian recipes. 
 
-I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu] (mailto:rps256@cornell.edu).
+I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu](mailto:rps256@cornell.edu).
 
 #-------------------------------
 # CV & Resume Section
