--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,9 +41,9 @@ disqus:
 about: >
   # About
 
-Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.  
-\ My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well. 
-\ My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science. 
+Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University. \
+My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well. \
+My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science. \
 
 Subject wise, I am interested in understanding how modern technological advances are reshaping longstanding American social structures and may be exasperating preexisting inequalities. 
 My primary research project (and likely dissertation topic) is investigating Airbnb’s impact on affordable housing and gentrification within major metropolitan regions such as San Francisco and NYC. 
