--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,11 +41,13 @@ disqus:
 about: >
   # About
 
-  Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.\
-  My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well.\
-  My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science.\
+  Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.<br>
 
-  I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu](mailto:rps256@cornell.edu).
+  My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well.<br>
+
+  My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science.<br>
+
+  I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu](mailto:rps256@cornell.edu).<br>
 
 #-------------------------------
 # CV & Resume Section
