--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,13 +41,13 @@ disqus:
 about: >
   # About
 
-  Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.<br>
-
-  My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well.<br>
-
-  My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science.<br>
-
-  I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu](mailto:rps256@cornell.edu).<br>
+  <p>Hi there! My name is Remy Stewart, and I’m currently a second-year PhD student at Cornell University.
+  </p>
+  <p>My program is housed in Sociology, but I’m lucky to be pursuing interdisciplinary training with Cornell’s Policy Analysis and Management and Information Science departments as well.<br>
+  </p>
+  <p>My research stands at the intersection between social stratification scholarship, public policy, urban studies, and computational social science.
+  </p>
+  I’d love to get in touch, and you can reach me through my email at [rps256@cornell.edu](mailto:rps256@cornell.edu).
 
 #-------------------------------
 # CV & Resume Section
