--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -54,8 +54,7 @@ about: >
 #-------------------------------
 # CV & Resume Section
 
-CV & Resume: >
-
+CV & Resume: 
   - {file: 'pages/cvres.html'}
 
 #-------------------------------
